tests/sksl/errors/golden/UndefinedSymbol.glsl
### Compilation failed:

void main() { x = float2(1); }


### Errors:
error: 1: unknown identifier 'x'
1 error
